Removed all use of URL and replace with URI.